--- a/SpotifyAlarmClock/Views/TableBackgroundView.xib
+++ b/SpotifyAlarmClock/Views/TableBackgroundView.xib
@@ -8,14 +8,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SongSearchBackgroundView">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TableBackgroundView">
             <rect key="frame" x="0.0" y="94" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WQr-dQ-OXp">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="418"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SongSearchBackground" translatesAutoresizingMaskIntoConstraints="NO" id="JQc-uz-gcK">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NoSearchQuery" translatesAutoresizingMaskIntoConstraints="NO" id="JQc-uz-gcK">
                             <rect key="frame" x="0.0" y="109" width="320" height="200"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="JQc-uz-gcK" secondAttribute="height" multiplier="8:5" id="CEF-UK-oVt"/>
@@ -41,12 +41,13 @@
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <connections>
+                <outlet property="backgroundImageView" destination="JQc-uz-gcK" id="g34-5F-xKW"/>
                 <outlet property="keyboardConstraint" destination="vKf-kO-tCK" id="JEp-cz-udB"/>
                 <outlet property="topSpaceConstraint" destination="opM-U6-LZf" id="noQ-oJ-3w5"/>
             </connections>
         </view>
     </objects>
     <resources>
-        <image name="SongSearchBackground" width="320" height="200"/>
+        <image name="NoSearchQuery" width="320" height="200"/>
     </resources>
 </document>
